upadte 2nd time

--- a/index.html
+++ b/index.html
@@ -157,5 +157,6 @@
         </div>
     </section>
     <script src="js/location.js"></script>
+    <script src="js/hambargenicon.js"></script>
 </body>
 </html>
