--- a/tech.html
+++ b/tech.html
@@ -157,5 +157,6 @@
         </div>
     </section>
     <script src="js/location.js"></script>
+    <script src="js/hambargenicon.js"></script>
 </body>
 </html>
