add the price and fix the cards

--- a/index.html
+++ b/index.html
@@ -70,7 +70,8 @@
                           <div class="card-part2">
                             <strong>Aya Ramesh Roy</strong>
                             <p><strong>Organization:</strong> XYZ Service</p>
-                            A Medical Technician is a medical professional who plays a vital part in the health care industry by providing support for physicians and hospitals.
+                           <p> A Medical Technician is a medical professional who plays a vital part in the health care industry by providing support for physicians and hospitals.</p>
+                           <strong><span style="color: red;">INR 500 per day</span></strong>
                             <br>
                             <br>
                             <button class="btn btn-secondary-orange">Book</button></div>
@@ -82,7 +83,8 @@
                           <div class="card-part2">
                             <strong>Aya Ramesh Roy</strong>
                             <p><strong>Organization:</strong> XYZ Service</p>
-                            A Medical Technician is a medical professional who plays a vital part in the health care industry by providing support for physicians and hospitals.
+                            <p> A Medical Technician is a medical professional who plays a vital part in the health care industry by providing support for physicians and hospitals.</p>
+                            <strong><span style="color: red;">INR 500 per day</span></strong>
                             <br>
                             <br>
                             <button class="btn btn-secondary-orange">Book</button></div>
