--- a/nurse.html
+++ b/nurse.html
@@ -70,8 +70,9 @@
                           <div class="card-part2">
                             <strong>Nurse Ramesh Roy</strong>
                             <p><strong>Organization:</strong> XYZ Service</p>
-                            A Medical Technician is a medical professional who plays a vital part in the health care industry by providing support for physicians and hospitals.
-                            <br>
+                            <p> A Medical Technician is a medical professional who plays a vital part in the health care industry by providing support for physicians and hospitals.</p>
+                           <strong><span style="color: red;">INR 500 per day</span></strong>
+                           <br>
                             <br>
                             <button class="btn btn-secondary-orange">Book</button></div>
             </div>
@@ -82,8 +83,9 @@
                           <div class="card-part2">
                             <strong>Nurse Ramesh Roy</strong>
                             <p><strong>Organization:</strong> XYZ Service</p>
-                            A Medical Technician is a medical professional who plays a vital part in the health care industry by providing support for physicians and hospitals.
-                            <br>
+                            <p> A Medical Technician is a medical professional who plays a vital part in the health care industry by providing support for physicians and hospitals.</p>
+                           <strong><span style="color: red;">INR 500 per day</span></strong>
+                           <br>
                             <br>
                             <button class="btn btn-secondary-orange">Book</button></div>
             </div>
