--- a/tech.html
+++ b/tech.html
@@ -70,8 +70,8 @@
                           <div class="card-part2">
                             <strong>Tech Ramesh Roy</strong>
                             <p><strong>Organization:</strong> XYZ Service</p>
-                            A Medical Technician is a medical professional who plays a vital part in the health care industry by providing support for physicians and hospitals.
-                            <br>
+                            <p> A Medical Technician is a medical professional who plays a vital part in the health care industry by providing support for physicians and hospitals.</p>
+                            <strong><span style="color: red;">INR 500 Pre</span></strong><br>
                             <br>
                             <button class="btn btn-secondary-orange">Book</button></div>
             </div>
@@ -82,8 +82,8 @@
                           <div class="card-part2">
                             <strong>Tech Ramesh Roy</strong>
                             <p><strong>Organization:</strong> XYZ Service</p>
-                            A Medical Technician is a medical professional who plays a vital part in the health care industry by providing support for physicians and hospitals.
-                            <br>
+                            <p> A Medical Technician is a medical professional who plays a vital part in the health care industry by providing support for physicians and hospitals.</p>
+                            <strong><span style="color: red;">INR 500 Pre</span></strong><br>
                             <br>
                             <button class="btn btn-secondary-orange">Book</button></div>
             </div>
