--- a/Medical Supplies/Technical Supplies.html
+++ b/Medical Supplies/Technical Supplies.html
@@ -34,10 +34,10 @@
         <button class="btn"><i class="fa-solid fa-magnifying-glass"></i></button>
     </div>
     <nav class="navbar">
-        <a class="navlink" href="/HomePage/index.html">Home</a>
-        <a class="navlink" href="/HomePage/index.html#services">Services</a>
-        <a class="navlink" href="/HomePage/index.html#review">Review</a>
-        <a class="navlink" href="/HomePage/index.html#footer">contact Us</a>
+        <a class="navlink" href="index.html">Home</a>
+        <a class="navlink" href="index.html#services">Services</a>
+        <a class="navlink" href="index.html#review">Review</a>
+        <a class="navlink" href="index.html#footer">contact Us</a>
     </nav>
     
     
