--- a/nursetechniciansupport/aya.html
+++ b/nursetechniciansupport/aya.html
@@ -31,12 +31,11 @@
             <button class="btn"><i class="fa-solid fa-magnifying-glass"></i></button>
         </div>
         <nav class="navbar">
-            <a class="navlink" href="/HomePage/index.html">Home</a>
-            <a class="navlink" href="/HomePage/index.html#services">Services</a>
-            <a class="navlink" href="/HomePage/index.html#review">Review</a>
-            <a class="navlink" href="/HomePage/index.html#footer">contact Us</a>
+            <a class="navlink" href="index.html">Home</a>
+            <a class="navlink" href="index.html#services">Services</a>
+            <a class="navlink" href="index.html#review">Review</a>
+            <a class="navlink" href="index.html#footer">contact Us</a>
         </nav>
-
         <a href="#" id="user-avatar"><i class="fa-solid fa-user fa-lg account-avatar"></i></a>
         
         <div id="menu-btn" class="fa fa-bars"> </div>
