--- a/index.html
+++ b/index.html
@@ -13,15 +13,15 @@
 
    
     <!-- css -->
-    <link rel="stylesheet" href="css/home.css">
-    <link rel="stylesheet" href="sourav.css">
-    <link rel="stylesheet" href="/Blood_Booking/Css/navbar.css">
-    <link rel="stylesheet" href="/Blood_Booking/Css/navLink.css">
-    <link rel="stylesheet" href="/Blood_Booking/Css/media.css">
-    <link rel="stylesheet" href="/Blood_Booking/Css/body_cont.css">
-    <link rel="stylesheet" href="/Ambulance Service/Css/footer_style.css">
-    <link rel="stylesheet" href="/Ambulance Service/Css/location_win.css">
-    <link rel="stylesheet" href="/Blood_Booking/Css/cont-card.css">
+    <link rel="stylesheet" href="/css/home.css">
+    <link rel="stylesheet" href="/css/sourav.css">
+    <link rel="stylesheet" href="/css/navbar.css">
+    <link rel="stylesheet" href="/css/navLink.css">
+    <link rel="stylesheet" href="/css/media.css">
+    <link rel="stylesheet" href="/css/body_cont.css">
+    <link rel="stylesheet" href="/css/footer_style.css">
+    <link rel="stylesheet" href="/css/location_win.css">
+    <link rel="stylesheet" href="/css/cont-card.css">
 
    
     <!-- for slider  -->
