--- a/index.html
+++ b/index.html
@@ -13,15 +13,15 @@
 
    
     <!-- css -->
-    <link rel="stylesheet" href="/css/home.css">
-    <link rel="stylesheet" href="/css/sourav.css">
-    <link rel="stylesheet" href="/css/navbar.css">
-    <link rel="stylesheet" href="/css/navLink.css">
-    <link rel="stylesheet" href="/css/media.css">
-    <link rel="stylesheet" href="/css/body_cont.css">
-    <link rel="stylesheet" href="/css/footer_style.css">
-    <link rel="stylesheet" href="/css/location_win.css">
-    <link rel="stylesheet" href="/css/cont-card.css">
+    <link rel="stylesheet" href="home.css">
+    <link rel="stylesheet" href="sourav.css">
+    <link rel="stylesheet" href="navbar.css">
+    <link rel="stylesheet" href="navLink.css">
+    <link rel="stylesheet" href="media.css">
+    <link rel="stylesheet" href="body_cont.css">
+    <link rel="stylesheet" href="footer_style.css">
+    <link rel="stylesheet" href="location_win.css">
+    <link rel="stylesheet" href="cont-card.css">
 
    
     <!-- for slider  -->
