--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
     <link rel="stylesheet" href="footer_style.css">
     <link rel="stylesheet" href="location_win.css">
     <link rel="stylesheet" href="cont-card.css">
+    <link rel="stylesheet" href="slider.css">
 
    
     <!-- for slider  -->
